--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "ownerNumber": ["6285255312224@s.whatsapp.net","6285255312224@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ FazzOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/Fazz_15",
-    "botName": "Fazz-Mdོ ",
-    "footer": "api.Fazzofc.xyz",
+    "ownerNumber": ["6288215093987@s.whatsapp.net","6288215093987@s.whatsapp.net"],
+    "ownerName": "ᴹᴿ᭄ BrianOfcོ ×፝֟͜×",
+    "instagram" : "https://instagram.com/rikobrianp_",
+    "botName": "Brian-Mdོ ",
+    "footer": "api.Brianofc.xyz",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
     "BotKey": "Gsyt6jRJ",
